Added comments in the notebook

--- a/S5.ipynb
+++ b/S5.ipynb
@@ -36,6 +36,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Download the training and the test data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -43,6 +51,14 @@
    "source": [
     "train_data = datasets.MNIST('../data', train=True, download=True, transform=model.train_transforms())\n",
     "test_data = datasets.MNIST('../data', train=False, download=True, transform=model.test_transforms())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Build the dataloaders"
    ]
   },
   {
@@ -56,6 +72,14 @@
     "kwargs = {'batch_size': batch_size, 'shuffle': True, 'num_workers': 2, 'pin_memory': True,}\n",
     "test_loader = model.test_loader(test_data, **kwargs)\n",
     "train_loader = model.train_loader(train_data, **kwargs)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Look at some of the data"
    ]
   },
   {
@@ -80,6 +104,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Initialize variables to use in making plots later on"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -92,6 +124,14 @@
     "test_acc = []\n",
     "\n",
     "test_incorrect_pred = {'images': [], 'ground_truths': [], 'predicted_vals': []}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Train a model"
    ]
   },
   {
@@ -219,6 +259,19 @@
     "                                     test_losses)\n",
     "  scheduler.step()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Visualize the training performance "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
